--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p class="par">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
         <div class="skill-row">
-          <img class="ch" src="images/chillies.png" alt="chilli">
+          <img class="ch" src="chillies.png" alt="chilli">
           <h3>Lorem Ipsum Dolor</h3>
           <p class="pa">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
         </div>
