--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/ashutosh-kumar-a26073199">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
 
       <p class="aj">© 2020 Ashutosh  Kumar.</p>
